# core-audio-device-management

./: CMakeLists.txt  README.md
source/: main.cpp
source/shared/audio/: AudioDevice.h  AudioDeviceList.h  AudioDeviceListener.h
source/shared/utilities/: Core.h
